# genedatafactory

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/genedatafactory/: config.yaml
src/genedatafactory/binary/disease/: hpo.py  mondo.py
src/genedatafactory/binary/gene/: go.py  reactome.py  swissprot.py
src/genedatafactory/disease/: clinvar.py  hpo.py  mondo.py  variant.py
src/genedatafactory/embeddings/: biobert.py  ontology.py  pathway.py  sequence.py  text.py
src/genedatafactory/gene/: go.py  pathway.py  reactome.py  string_net.py  swissprot.py
src/genedatafactory/gene_disease/: clinvar.py  omim.py
src/genedatafactory/graph/: string_net.py
src/genedatafactory/script/: main.py  synthesize.py  synthetic.py  utils.py
src/genedatafactory/synthetic/: README.md  models.py  sample_compute.py  synthetic_config.py
