[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "genedatafactory"
description = "Dataset generation and preprocessing tools for gene prioritization experiments."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Azim Givron" }
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License"
]
dynamic = ["version", "dependencies"]

[project.scripts]
genedatafactory = "genedatafactory.script.main:main"
synthesize = "genedatafactory.script.synthesize:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

# ── Include non-Python data shipped inside the package ──
[tool.setuptools.package-data]
genedatafactory = ["config.yaml"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools_scm]
write_to = "src/genedatafactory/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.pytest.ini_options]
pythonpath = ["src"]
